fix bug (text file for changes)