@@ -1,23 +1,30 @@
 package com.example.DonationInUniversity.config;
 
 import com.example.DonationInUniversity.security.ApiRequestFilter;
-import com.example.DonationInUniversity.utils.Sha256PasswordEncoder;
+import com.example.DonationInUniversity.service.UserService;
+//import com.example.DonationInUniversity.utils.Sha256PasswordEncoder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.NoOpPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.rememberme.InMemoryTokenRepositoryImpl;
 import org.springframework.security.web.authentication.rememberme.PersistentTokenRepository;
+import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
+import org.springframework.security.web.context.SecurityContextRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
@@ -29,70 +36,128 @@ import java.util.List;
 public class SecurityConfig {
 
     private final ApiRequestFilter apiRequestFilter;
-
+    @Autowired
     public SecurityConfig(ApiRequestFilter apiRequestFilter) {
         this.apiRequestFilter = apiRequestFilter;
+
     }
 
-    // Security for API (port 8080)
     @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+    // Security for API (port 8080)
+//    @Bean
+//    public SecurityFilterChain apiSecurityFilterChain(HttpSecurity http) throws Exception {
+//        http
+//                .csrf(csrf -> csrf.disable())
+//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//                .authorizeHttpRequests(auth -> auth
+//                        .requestMatchers(
+//                                "/api/register",
+//                                "/api/authenticate",
+//                                "/api/token/refresh",
+//                                "/swagger-ui/**",
+//                                "/v3/api-docs/**",
+//                                "/admin/login",
+//                                "/*"
+//                        ).permitAll()
+//                        .requestMatchers(
+//                                "/admin/**" // Only allow access to admin routes on port 8000
+//                        ).hasAuthority("admin")
+//
+//                        .anyRequest().authenticated()
+//                )
+//                .addFilterBefore(apiRequestFilter, UsernamePasswordAuthenticationFilter.class);
+//
+//        http.formLogin(login->login
+//                .loginPage("/admin/login")
+//                .loginProcessingUrl("/admin/login")
+//                .usernameParameter("email")
+//                .passwordParameter("password")
+//                .defaultSuccessUrl("/")
+//
+//        );
+//        http.sessionManagement(session->session
+//                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+//        );
+//        return http.build();
+//    }
+    @Bean
+    @Order(1) // Đảm bảo SecurityFilterChain này được ưu tiên
     public SecurityFilterChain apiSecurityFilterChain(HttpSecurity http) throws Exception {
         http
+                .securityMatcher("/api/**") // Áp dụng cấu hình này cho các đường dẫn bắt đầu bằng /api/
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Stateless vì sử dụng JWT
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
                                 "/api/register",
                                 "/api/authenticate",
                                 "/api/token/refresh",
                                 "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/admin/login"
+                                "/v3/api-docs/**"
                         ).permitAll()
-                        .requestMatchers(
-                                "/admin/**" // Only allow access to admin routes on port 8000
-                        ).hasRole("admin")
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(apiRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
-        http.formLogin(login->login
-                .loginPage("/admin/login")
-                .loginProcessingUrl("/admin/login")
-                .usernameParameter("email")
-                .passwordParameter("password")
-                .defaultSuccessUrl("/admin/**")
-
-        );
-
         return http.build();
     }
+    @Bean
+    @Order(2) // Đảm bảo cấu hình này được áp dụng sau API
+    public SecurityFilterChain webSecurityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .securityMatcher("/admin/**", "/admin/login", "/admin/logout") // Áp dụng cho các đường dẫn admin và login
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)) // Stateful cho web
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/admin/login").permitAll()
+                        .requestMatchers("/admin/**").hasAuthority("admin") // Chỉ người dùng có quyền admin mới truy cập
+                        .anyRequest().authenticated()
+                )
+                .formLogin(form -> form
+                        .loginPage("/admin/login")
+                        .loginProcessingUrl("/admin/login")
+                        .usernameParameter("email")
+                        .passwordParameter("password")
+                        .defaultSuccessUrl("/admin/", true)
+                        .failureUrl("/admin/login?error=true")
+                )
+                .logout(logout -> logout
+                        .logoutUrl("/admin/logout")
+                        .logoutSuccessUrl("/admin/login")
+                );
 
+        return http.build();
+
+
+
+    }
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new Sha256PasswordEncoder(); // Custom password encoder
     }
 
     // CORS Configuration
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Allow localhost:3000
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed methods
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type")); // Allowed headers
-        configuration.setAllowCredentials(true); // Allow credentials (cookies, etc.)
+        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Cho phép origin
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Cho phép phương thức
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type")); // Cho phép headers
+        configuration.setAllowCredentials(true); // Cho phép credentials
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    @Bean
+        @Bean
     WebSecurityCustomizer customizer() {
         return web -> web.ignoring().requestMatchers("/static/**", "/assets/**");
     }
